# gpu-oversubscribed-ds-oopsla26

./: .gitignore  Makefile  README.md
Graph_Plotting_Scripts/: Bar_Comparison_applications.py  Bar_Comparison_main_results.py  Line_Comparison_motivation.py  Manual_PF_RM_motivation.py  hashtable_fig11_lhs_plot.py  hashtable_fig13_plot.py  hashtable_fig14_plot_manual.py  hashtable_fig17_lhs_plot.py  hashtable_fig4a_fig4b_plot.py  hashtable_fig9_fig10_fig12_fig15_plot.py  skiplist_fig16_plot.py  skiplist_fig17_plot.py  skiplist_fig4c_plot.py  skiplist_fig6b_plot.py  skiplist_ktt_plot.py  skiplist_motivation_plot.py
benchmark_scripts/: build_binary.sh  verify_python_library.py
benchmark_scripts/Applications_Scripts/: HTOVS.sh  HTUVM.sh
benchmark_scripts/CG_Size_Scripts/: HTOVS.sh  HTUVM.sh
benchmark_scripts/CuCo_Scripts/: bench_insert.sh  bench_search.sh
benchmark_scripts/HTOVS_Scripts/: bench_delete.sh  bench_insert.sh  bench_search_positive.sh
benchmark_scripts/HTOVS_scripts/: bench_delete.sh  bench_insert.sh  bench_search_negative.sh  bench_search_positive.sh
benchmark_scripts/HTUVM_Scripts/: bench_delete.sh  bench_insert.sh  bench_insert_sort.sh  bench_search_negetive.sh  bench_search_positive.sh
benchmark_scripts/HTUVM_scripts/: bench_delete.sh  bench_insert.sh  bench_search_negetive.sh  bench_search_positive.sh
benchmark_scripts/Motivation_Scripts/: batch_insert_w_hints.sh  batch_search_w_hints.sh  batch_search_wo_hints.sh  bench_insert_wo_hints.sh
benchmark_scripts/Profiler_Scripts/: Page_Faults.sh  Remote_Mappings.sh
benchmark_scripts/skiplist_scripts/: applications_study.sh  build_binary.sh  fig16_script.sh  fig4c_study.sh  innersl_sensitivity_study.sh  keys_per_warp_study.sh  kick_the_tire_script.sh  motivation_study.sh  parse_applications_results.py  parse_fig16_results.py  parse_fig17_results.py  parse_fig4c_skiplist_results.py  parse_fig6b_results.py  parse_innersl_sensitivity_results.py  parse_kpw_results.py  parse_ktt_results.py  parse_motivation_skiplist_results.py  parse_table8_results.py  parse_table9_results.py  parse_thread_block_results.py  table10_study.sh  table8_study.sh  table9_study.sh  thread_block_study.sh  validation_script.sh  verify_python_library.py
catch2/build_cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
catch2/build_cmake/src/: Makefile  cmake_install.cmake
cuCollections/: CMakeLists.txt  README.md
cuCollections/benchmarks/dynamic_map/: contains_bench.cu  erase_bench.cu  find_bench.cu  insert_bench.cu  retrieve_all_bench.cu
cuCollections/benchmarks/static_multimap/: count_bench.cu  insert_bench.cu  query_bench.cu  retrieve_bench.cu
cuCollections/examples/static_map/: count_by_key_example.cu  device_ref_example.cu
cuCollections/include/cuco/: hash_functions.cuh
cuCollections/tests/: CMakeLists.txt
cuCollections/tests/dynamic_map/: erase_test.cu  find_test.cu  retrieve_all_test.cu  unique_sequence_test.cu  unique_sequence_test_experimental.cu
cuCollections/tests/hyperloglog/: spark_parity_test.cu
cuCollections/tests/roaring_bitmap/: contains_test.cu
cuCollections/tests/static_map/: bench.sh  contains_test.cu  custom_driver.cu  erase_test.cu  find_test.cu  nohup.out  (+1 more)
gph_opensource_copy/: .gitignore  CMakeLists.txt  README.md  ncu_perf.sh
gph_opensource_copy/autoexp/: autoexp.py  example_result.csv  ext_ncu_analyze.py  test.py
gph_opensource_copy/common/: CMakeLists.txt  Exp_batch_result_holder.cu
gph_opensource_copy/common/include/: Exp_batch_result_holder.cuh  log.h
gph_opensource_copy/common/tests/: test_common_functions.cu  test_time_recorder.cu
gph_opensource_copy/cudppImpl/: CMakeLists.txt
gph_opensource_copy/cudppImpl/include/: common.h  cuckoo-cuda-naive.cuh
gph_opensource_copy/cudppImpl/src/: static-demo.cu
gph_opensource_copy/datasource/: CMakeLists.txt  check_skewness.py  check_tao.py  data_source.cu  data_source.h  dataset_meta.txt  generate_pos_neg_workload.py  generate_random_num.py  generator_tao.cpp  handle_raw_lineitem.py  handle_raw_reddit.py  handle_raw_tao.py  mt19937ar.cpp  mt19937ar.h  preview.py  random_numbers.cpp  random_numbers.h  valid_check.py
gph_opensource_copy/dycuckoo/: CMakeLists.txt
gph_opensource_copy/geph/: CMakeLists.txt
gph_opensource_copy/geph/include/: GPHOS.cuh  GPHOS_inner.cuh  halfType.cuh  murmur3.cuh
gph_opensource_copy/geph/include/inner_header/: GPHOS_config.cuh  GPHOS_const.cuh  GPHOS_decl.cuh  GPHOS_util.cuh
gph_opensource_copy/geph/src/: GPHOS.cu  debug_excsi.cu  demo.cu  dionlyphase.cuh  excsi.cuh  gph_autoexp.py  remainingphase.cuh  workspace.cuh
gph_opensource_copy/perf/: CMakeLists.txt  competitors-experiments.cuh  cudppimpl_naive_exp.cuh  dycuckoo_exp.cuh  experiments.cu  experiments.cuh  geph_exp.cuh  gph_autoexp.py  gph_autoexp_autotune.json  gph_autoexp_comp_v3.json  perf-final-utils.cuh  perf-final.cu  perf-test.cu  warpcore_exp.cuh
gph_opensource_copy/res/: handle_it.py  result_analyze.py
gpu/applications/: gpu_impl_UVM_CG_kmer.cuh  gpu_part_HoH_CG_kmer.cuh  kmer_counting.cu  kmer_counting_HoH.cu  metacache.cu  metacache_HoH.cu
gpu/hashtable/: driver_hashtable_UVM.cu  driver_hetero_hash_batch.cu  gpu_impl_UVM_CG.cuh  gpu_part_batch_HoH_CG.cuh
gpu/skiplist/: skiplist_gfsl.cu  skiplist_gfsl.cuh  skiplist_gfsl_fixed_index.cu  skiplist_gfsl_fixed_index.cuh  skiplist_gfsl_hetero.cuh  skiplist_gfsl_hetero_kmer.cuh  skiplist_gfsl_kmer.cuh  skiplist_gfsl_range.cuh  skiplist_gfsl_separate_pool.cuh  skiplist_gfsl_unsorted.cuh  skiplist_stats.cuh  trace_bm_gfsl_classifier.cu  trace_bm_gfsl_hetero.cu  trace_bm_gfsl_hetero_classifier.cu  trace_bm_gfsl_hetero_kmer.cu  trace_bm_gfsl_kmer.cu  trace_bm_gfsl_uvm.cu
include/: constants.h  datatypes.h  functions.h  global-vars.h  primes.h
tracegen_scripts/: application_traces.sh  trace_script.sh  trace_script_skiplist.sh  tracegen_DR.py  tracegen_DU.py  tracegen_DUL.py  tracegen_DU_GPH.py  tracegen_MI.py  tracegen_MI_GPH.py  tracegen_SR.py  tracegen_SU.py  tracegen_SUR.py  tracegen_SU_GPH.py  tracegen_ZZ.py  tracegen_skiplist.cpp
(+19 files in other folders)
